# connect-4-ai

./: .gitignore  pyproject.toml
connect_4_ai/: model_nn.py  run.py  torch_utils.py  train.py
